[package]
name = "dogg"
version = "0.1.3"
edition = "2021"
authors = ["PraxTube"]
description = "CLI tool that let's you log data manually."
homepage = "https://github.com/PraxTube/dogg"
documentation = "https://github.com/PraxTube/dogg"
repository = "https://github.com/PraxTube/dogg"
readme = "README.md"

license = "MIT"

keywords = ["data-logger", "log", "logger", "data"]
categories = ["command-line-interface", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
chrono = "0.4.26"
strsim = "0.10.0"
serde_json = "1.0.97"
